set up the dark mode colors to add later, fix width issue and add borders to media buttons

--- a/src/components/AddTasks.css
+++ b/src/components/AddTasks.css
@@ -115,7 +115,7 @@
     margin: 0px 5px 0px 5px;
     text-align: start;
     display: none;
-    max-width: 300px;
+    max-width: 295px;
 }
 
 .complete {
