--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,3 +1,7 @@
+a {
+    color: inherit;
+}
+
 .icons {
     display: flex;
     align-items: center;
@@ -10,14 +14,12 @@
     background: #545c6e;
     padding: 10px 10px 6px 10px;
     border-radius: 10px;
+    border-top: 3px solid #8992a7;
+    border-left: 3px solid #8992a7;
     transition: all ease-in .5s;
     cursor: pointer;
 }
 
 .icon:hover {
-    background-color: #8992a7;
-}
-
-a {
-    color: inherit;
+    background-color: #777f92;
 }
